--- a/12-YoutubeApp/src/app/components/home/home.component.html
+++ b/12-YoutubeApp/src/app/components/home/home.component.html
@@ -27,7 +27,14 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+<div class="modal fade" 
+      id="modal" 
+      tabindex="-1" 
+      role="dialog" 
+      aria-labelledby="modalLabel" 
+      aria-hidden="true"
+      data-backdrop="static"
+      data-keyboard="false">
     <div class="modal-dialog" role="document">
 
       <div class="modal-content" *ngIf="videoSel">
